# sea-api

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.artillery/: package.json
.artillery/src/: index.cjs
.artillery/tests/: load-test-config.yml  random-values.js
.docker/nginx/: Dockerfile  nginx.conf
.docker/nginx/views/: 404.html
.docker/postgres/: .env.example
.github/workflows/: deploy.yml  health.yml
assets/: mosquitto.conf
assets/documents/: advertising_contract.html  installation_contract.html
assets/templates/: forgot_password.html
src/seaapi/adapters/db/: alembic.ini  orm.py
src/seaapi/adapters/entrypoints/: application.py
src/seaapi/adapters/services/: nutrition.py  qrcode.py
src/seaapi/adapters/unit_of_works/: __init__.py  foods.py  groups.py  meals.py  permissions.py  products.py  scales.py  sections.py  shared.py  stores.py  tokens.py  users.py
src/seaapi/adapters/use_cases/: __init__.py  food_events.py  foods.py  groups.py  meals.py  permissions.py  products.py  qrcode.py  scales.py  sections.py  stores.py  tokens.py  users.py
src/seaapi/config/: __init__.py  containers.py  settings.py
src/seaapi/domain/dtos/: foods.py  general.py  groups.py  meals.py  mics.py  nutrition.py  (+8 more)
src/seaapi/i18n/: __init__.py
src/siasdapi/config/: containers.py  settings.py
src/siasdapi/domain/: __init__.py
src/siasdapi/i18n/: __init__.py  locales.py
tests/: conftest.py  fake_container.py
tests/utils/: auth.py
(+235 files in other folders)
